# specipy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
specifipy/diagram_engines/: hashable_connection.py
specifipy/file_scanners/: directory_scanner.py
specifipy/parsers/: diagram_generator.py  diagram_generator_d2.py  generic_parser.py
specifipy/parsers/structure/: code_structure_definitions.py
specipy/parsers/: diagram_generator.py  generic_parser.py  results.py
tests/: test_diagram_engines.py  test_diagram_generator.py  test_generic_parser.py  test_parser_factory.py
tests/examples/: complex_number_old_python.py  models.py  simple_addition_modern_python.py
tests/examples/diagrams/: complex_number_old_python.py.d2  example_diagram_gen.py  models.py.d2  simple_addition_modern_python.py.d2
