[tool.poetry]
name = "specipy"
version = "0.1.0"
description = ""
authors = ["Bartosz Budzyński <hi@bartosz.blog>"]

[tool.poetry.dependencies]
python = "^3.8"
diagrams = "0.23.1"
snakemd = "0.11.0"
docstring-parser = "0.15"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
